--- a/DIST_Triplength.html
+++ b/DIST_Triplength.html
@@ -209,7 +209,7 @@ td:nth-child(6) {
         <div class="collapse show" id="dashboard-collapse">
           <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><a href="DIST_Triplength.html" class="link-dark d-inline-flex text-decoration-none rounded" style="background-color:ADCEDE" >Trip Length </a></li>
-             <li><a href="DIST_Intra.html" class="link-dark d-inline-flex text-decoration-none rounded" >Intrazonal Trips </a></li>
+             <li><a href="DIST_intra.html" class="link-dark d-inline-flex text-decoration-none rounded" >Intrazonal Trips </a></li>
           </ul>
         </div>
       </li>
